Update the rest of entities